# smart-travel-planner-

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  test_rag.py
backend/app/: config.py  db.py  main.py  state.py
backend/app/agent/: agent.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/ml/: travel_classifier.joblib
backend/app/models/: database.py
backend/app/rag/: ingest.py  rag_travel_dataset_enriched_60.json  retriever.py
backend/app/routes/: agent.py  auth.py
backend/app/services/: webhook.py
backend/app/tools/: classifier_tool.py  live_conditions_tool.py  rag_tool.py
backend/ml_experiments/: destinations_v2.csv  results.csv
backend/tests/: test_agent.py  test_schemas.py  test_tools.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Auth.jsx  Chat.jsx  InputBar.jsx  MessageBubble.jsx  Sidebar.jsx  ToolCard.jsx
