[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "cachetools>=7.0.6",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.9",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.46.0",
]
[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.2.0%2Bcpu-cp311-cp311-win_amd64.whl" }
